--- a/assets/css/layout/body.css
+++ b/assets/css/layout/body.css
@@ -7,6 +7,7 @@ body {
   text-rendering: optimizeSpeed;
   background-color: theme('colors.slate[100]');
   height: 100vh;
+  user-select: none;
 }
 
 /* background image */
