--- a/assets/css/layout/base.css
+++ b/assets/css/layout/base.css
@@ -1,3 +1,24 @@
+input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
+
 button {
   transition: transform 0.3s ease-out;
+}
+
+*:focus-visible {
+  outline: none;
+}
+
+input,
+textarea,
+button,
+select,
+li,
+a {
+  -webkit-tap-highlight-color: transparent;
 }
